rework structure, separate code from index.js
